# pyjidelnicek

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
pyjidelnicek/: __init__.py  _version.py  allergens.json  menu.py
tests/: conftest.py  test_base_strava.py  test_strava5.py
tests/fixtures/: sample_menu.xml
